tests/errors/semantic/non_blocking/class_inheritance.py
# pylint: disable=missing-function-docstring, missing-module-docstring, missing-class-docstring

class Point(NonExistantSuperClass): # pylint: disable=undefined-variable
    def __init__(self : 'Point'):
        pass
